tp section done

--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
     
 </head>
 <body>
-    <h1>Welcome To</h1>
-    <h1> <span class="name-highlight">Emon's</span>  World</h1>
-    
+    <section>
+    <div class="half-width">
+        <h1>Welcome To</h1>
+    <h1 id="font-weight"> <span class="name-highlight">Emon's</span>  World</h1>
+    <h3>Web Devoloper</h3>
+    <p>A web developer is a programmer or a coder who specializes in, or is specifically engaged in</p>
+    </div>
+    <div class="half-width">
+        <img src="img/image 11.png" alt="">
+    </div>
+    </section>
 </body>
 </html>
