--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
     
 </head>
 <body>
-    <section>
+    <section class="section-height">
     <div class="half-width">
-        <h1>Welcome To</h1>
+    <h1>Welcome To</h1>
     <h1 id="font-weight"> <span class="name-highlight">Emon's</span>  World</h1>
     <h3>Web Devoloper</h3>
     <p>A web developer is a programmer or a coder who specializes in, or is specifically engaged in</p>
+    <a class="link-button" href="https://www.linkedin.com/in/md-atik-faisal-emon-30b6b7232/">Linkedin</a>
+    <a class="link-button" href="">Youtube</a>
+    <a class="link-button" href="https://www.facebook.com/atikfaysalemon">Facebook</a>
     </div>
     <div class="half-width">
         <img src="img/image 11.png" alt="">
