--- a/index.html
+++ b/index.html
@@ -11,18 +11,32 @@
 </head>
 <body>
     <section class="section-height">
-    <div class="half-width">
-    <h1>Welcome To</h1>
-    <h1 id="font-weight"> <span class="name-highlight">Emon's</span>  World</h1>
-    <h3>Web Devoloper</h3>
-    <p>A web developer is a programmer or a coder who specializes in, or is specifically engaged in</p>
-    <a class="link-button" href="https://www.linkedin.com/in/md-atik-faisal-emon-30b6b7232/">Linkedin</a>
-    <a class="link-button" href="">Youtube</a>
-    <a class="link-button" href="https://www.facebook.com/atikfaysalemon">Facebook</a>
-    </div>
-    <div class="half-width">
-        <img src="img/image 11.png" alt="">
-    </div>
+
+        <div class="half-width">
+        <h1>Welcome To</h1>
+        <h1 id="font-weight"> <span class="name-highlight">Emon's</span>  World</h1>
+        <h3>Web Devoloper</h3>
+        <p>A web developer is a programmer or a coder who specializes in, or is specifically engaged in</p>
+        <a class="link-button" href="https://www.linkedin.com/in/md-atik-faisal-emon-30b6b7232/">Linkedin</a>
+        <a class="link-button" href="">Youtube</a>
+        <a class="link-button" href="https://www.facebook.com/atikfaysalemon">Facebook</a>
+        </div>
+        <div class="half-width">
+            <img src="img/image 11.png" alt="">
+        </div>
+
+    </section>
+
+    <section class="two-section">
+      <div class="half-width">
+          <img src="img/image 13.png" alt="">
+      </div>
+      <div class="">
+          <h1>Dream Big</h1>
+          <h3>Became World's No1 web developer</h3>
+          <p>I havw already learn basic HTML & CSS. I can build any simple web=site. I can also teach my grandmother how to build a simple web-site</p>
+          <a class="link-button" href="https://www.signaliconbd.com/">Shop-Now</a>
+      </div>
     </section>
 </body>
 </html>
