last part complete

--- a/index.html
+++ b/index.html
@@ -31,12 +31,29 @@
       <div class="half-width">
           <img src="img/image 13.png" alt="">
       </div>
-      <div class="">
+      
+      <div class="half-width ">
           <h1>Dream Big</h1>
-          <h3>Became World's No1 web developer</h3>
-          <p>I havw already learn basic HTML & CSS. I can build any simple web=site. I can also teach my grandmother how to build a simple web-site</p>
+          <h3 >Became World's No1 web developer</h3>
+          <p>I havw already learn basic HTML & CSS. I can build any simple web=site. I can also teach my grandmother how to build a simple web-site.Sadipscing ea eos sadipscing at et magna eirmod amet. Ea at sed sed ipsum. Aliquyam clita erat dolores dolor, clita. Rebum sanctus ipsum dolor aliquyam takimata, sed consetetur rebum takimata sed. Sit ipsum sed takimata clita. No diam magna et.</p>
           <a class="link-button" href="https://www.signaliconbd.com/">Shop-Now</a>
       </div>
+    </section>
+
+    <section class="Experiance-area">
+       <h1>Experiance</h1>
+        <div id="stack-devoloper" class="half-width single-ex">
+            <h2>Full Stack Developer</h2>
+            <h3 class="name-highlight">2021-Preasent | Pro Level Developer</h3>
+            <p>I am the master of HTML,CSS and Javascript.I konw every thing needed to a website function. efficent.Elitr sed et vero dolores invidunt diam nonumy sit, dolor diam vero elitr labore aliquyam sanctus ipsum, rebum sed nonumy.Clita sed et duo lorem aliquyam sit vero et erat gubergren, eirmod est consetetur magna nonumy stet justo invidunt. Ut et consetetur kasd dolores ipsum et kasd lorem no. Vero.</p>
+
+
+        </div>
+        <div id="baby-devoloper" class=" half-width single-ex">
+             <h2>Baby Web developer</H2>
+             <h3 class="name-highlight">2020-2021| Programming hero learner</h3>
+             <p>Duo sed stet ipsum ut eos amet amet aliquyam tempor consetetur. Et ipsum erat et ea justo duo. Sed invidunt.Ipsum dolores consetetur takimata consetetur takimata sed. Sed aliquyam dolor ipsum sed dolor gubergren ipsum elitr. Et invidunt magna kasd.Ut lorem dolore tempor sit amet sit sadipscing accusam et sit. Eos lorem dolor kasd dolore elitr dolore. Duo dolor dolore diam sed ipsum amet diam sed dolor. Sit amet.</p>
+        </div>
     </section>
 </body>
 </html>
