last- section done left border

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
 
     <section class="Experiance-area">
        <h1>Experiance</h1>
-        <div id="stack-devoloper" class="half-width single-ex">
+        <div id="stack-devoloper" class="half-width single-ex text-color">
             <h2>Full Stack Developer</h2>
             <h3 class="name-highlight">2021-Preasent | Pro Level Developer</h3>
             <p>I am the master of HTML,CSS and Javascript.I konw every thing needed to a website function. efficent.Elitr sed et vero dolores invidunt diam nonumy sit, dolor diam vero elitr labore aliquyam sanctus ipsum, rebum sed nonumy.Clita sed et duo lorem aliquyam sit vero et erat gubergren, eirmod est consetetur magna nonumy stet justo invidunt. Ut et consetetur kasd dolores ipsum et kasd lorem no. Vero.</p>
 
 
         </div>
-        <div id="baby-devoloper" class=" half-width single-ex">
+        <div id="baby-devoloper" class=" half-width single-ex text-color">
              <h2>Baby Web developer</H2>
              <h3 class="name-highlight">2020-2021| Programming hero learner</h3>
              <p>Duo sed stet ipsum ut eos amet amet aliquyam tempor consetetur. Et ipsum erat et ea justo duo. Sed invidunt.Ipsum dolores consetetur takimata consetetur takimata sed. Sed aliquyam dolor ipsum sed dolor gubergren ipsum elitr. Et invidunt magna kasd.Ut lorem dolore tempor sit amet sit sadipscing accusam et sit. Eos lorem dolor kasd dolore elitr dolore. Duo dolor dolore diam sed ipsum amet diam sed dolor. Sit amet.</p>
